# fafnir-spiel

./: .gitignore  CLI_GUIDE.md  EXECUTE_AFTER_FIX.md  GAMEINFO_CONSTRUCTOR_FIX.md  GAMEINFO_FIX.md  GAME_DESIGN_ISSUE.md  IMPLEMENTATION.md  OPENSPIEL_FIX.md  README.md  REQUIREMENTS_EXPLANATION.md  SUPER_INIT_FIX.md  ai_bot.py  ai_bot_mccfr.py  colab_fafnir.ipynb  fafnir_game.py  main.py  mccfr_ai.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.sh  server.py  test_fafnir.py  validate.py
